--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,11 @@ span {
 h1 {
   font-size: 54px;
 }
+@media screen and (max-width: 786.01px) {
+  h1 {
+    font-size: 40px;
+  }
+}
 
 img {
   pointer-events: none;
@@ -40,6 +45,10 @@ a {
   color: inherit;
 }
 
+p {
+  opacity: 0.7;
+}
+
 ul,
 nav {
   list-style-type: none;
@@ -51,6 +60,11 @@ html {
   background: fixed url(../img/bg__18.png) 0 -10vh no-repeat;
   background-size: cover;
 }
+@media screen and (max-width: 786.01px) {
+  html {
+    background-position-x: -600px;
+  }
+}
 
 .container {
   max-width: 1300px;
@@ -59,6 +73,11 @@ html {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+}
+@media screen and (max-width: 786.01px) {
+  .container {
+    justify-content: space-around;
+  }
 }
 
 .main {
@@ -72,10 +91,17 @@ html {
 .main__logo {
   max-width: 400px;
   width: 100%;
-  align-self: center;
   filter: sepia(0.1);
   opacity: 0;
   animation: appearan 1.5s 100ms ease-out forwards;
+}
+@media screen and (max-width: 786.01px) {
+  .main {
+    height: 85vh;
+  }
+  .main__logo {
+    padding: 0 5px;
+  }
 }
 
 .nav {
@@ -84,15 +110,17 @@ html {
   top: 0;
   width: 100%;
   background-color: white;
-  color: #1e1e1e;
+  color: #031c48;
   font-weight: 600;
   padding: 20px 0 10px;
 }
 .nav .list {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   max-width: 900px;
   width: 100%;
+  font-size: 20px;
 }
 .nav .list__link {
   border-radius: 20px;
@@ -101,7 +129,6 @@ html {
 .nav .list__link a {
   display: block;
   padding: 5px 20px;
-  font-size: 20px;
 }
 .nav .list__link:hover {
   box-shadow: 6px 6px 6px 0 rgba(0, 0, 0, 0.1), -4px -4px 4px 0 rgba(166, 165, 165, 0.1);
@@ -122,13 +149,35 @@ html {
 .nav .delivery__link:hover {
   text-decoration: underline;
 }
+@media screen and (max-width: 786.01px) {
+  .nav {
+    padding: 5px 0;
+  }
+  .nav .container {
+    flex-direction: column-reverse;
+  }
+  .nav .list {
+    font-size: 16px;
+    justify-content: space-around;
+  }
+  .nav .list a {
+    padding: 2px 5px;
+  }
+  .nav .delivery {
+    font-size: 20px;
+    text-align: center;
+  }
+  .nav .delivery__link--caption {
+    display: none;
+  }
+}
 
 .category {
   display: flex;
   justify-content: space-between;
   width: 100%;
   padding: 60px 0 10px;
-  color: #1e1e1e;
+  color: #031c48;
   align-items: center;
   font-size: 40px;
 }
@@ -139,7 +188,18 @@ html {
 .category__line {
   width: 100%;
   height: 4px;
-  background: #1e1e1e;
+  background: #031c48;
+}
+@media screen and (max-width: 786.01px) {
+  .category {
+    padding: 20px 0 10px;
+  }
+  .category__title {
+    margin: 10px;
+  }
+  .category__title i {
+    margin-right: 5px;
+  }
 }
 
 .box {
@@ -149,7 +209,7 @@ html {
   max-width: 280px;
   width: 100%;
   border-radius: 20px;
-  color: #1e1e1e;
+  color: #031c48;
   box-shadow: 12px 12px 12px 0 rgba(0, 0, 0, 0.3), -8px -8px 8px 0 rgba(166, 165, 165, 0.3);
   display: flex;
   flex-direction: column;
@@ -203,7 +263,7 @@ html {
 .box__numbers span:nth-child(odd) {
   font-weight: 900;
   padding: 5px;
-  border: 2px solid #1e1e1e;
+  border: 2px solid #031c48;
   border-radius: 50px;
   text-align: center;
   transition: 0.6s;
@@ -213,7 +273,7 @@ html {
   padding: 5px 0;
 }
 .box:hover .box__numbers--cost {
-  background-color: #1e1e1e;
+  background-color: #031c48;
   color: white;
 }
 
@@ -223,25 +283,30 @@ html {
 .pizza__container {
   margin-bottom: 100px;
 }
+@media screen and (max-width: 786.01px) {
+  .pizza__container {
+    margin-bottom: 0px;
+  }
+}
 .pizza__box:hover .box__wrapper--img {
   transform: rotateZ(30deg);
 }
 .pizza .ingridients {
   padding-bottom: 100px;
-  color: #1e1e1e;
+  color: #031c48;
 }
 .pizza .ingridients .container {
   justify-content: space-around;
   flex-wrap: wrap;
 }
 .pizza .ingridients .category {
-  color: #1e1e1e;
+  color: #031c48;
   padding: 20px;
   margin-bottom: 20px;
 }
 .pizza .ingridients .category hr {
   max-width: 340px;
-  background-color: #1e1e1e;
+  background-color: #031c48;
 }
 .pizza .ingridients__box {
   display: flex;
@@ -271,7 +336,7 @@ html {
 .pizza .ingridients__box .wrapper__numbers span:nth-child(odd) {
   font-weight: 700;
   padding: 3px;
-  border: 2px solid #1e1e1e;
+  border: 2px solid #031c48;
   border-radius: 50px;
   text-align: center;
   transition: 0.6s;
@@ -285,8 +350,30 @@ html {
   margin-left: 20px;
 }
 .pizza .ingridients__box:hover .wrapper__numbers--cost {
-  background-color: #1e1e1e;
+  background-color: #031c48;
   color: white;
+}
+
+.item {
+  max-width: 800px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0px;
+}
+.item__text {
+  width: 70%;
+}
+.item span {
+  width: 40px;
+  text-align: right;
+  margin-left: 10px;
+  align-self: center;
+}
+@media screen and (max-width: 786.01px) {
+  .item {
+    padding: 10px 10px;
+  }
 }
 
 .burger {
@@ -307,36 +394,30 @@ html {
   background-color: white;
 }
 .burger .item {
-  max-width: 800px;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding: 10px 0px;
+  max-width: 550px;
 }
-.burger .item__text {
-  max-width: 400px;
-  width: 100%;
-}
-.burger .item__text p {
-  opacity: 0.7;
-}
-.burger .item span {
-  width: 40px;
-  text-align: right;
-  align-self: center;
-  margin-left: 15px;
+@media screen and (max-width: 786.01px) {
+  .burger {
+    background-position-x: -400px;
+    background-position-y: 0;
+  }
+  .burger__wrapper {
+    margin: 0;
+    padding: 0 0 40px;
+    background: rgba(5, 29, 70, 0.8196078431);
+  }
 }
 
 .lunch {
   background: white;
-  color: #1e1e1e;
+  color: #031c48;
 }
 .lunch .category {
   display: flex;
   flex-direction: column;
 }
 .lunch .category__line {
-  background: #1e1e1e;
+  background: #031c48;
 }
 .lunch__wrapper {
   width: 100%;
@@ -348,31 +429,13 @@ html {
 .lunch__wrapper--title {
   margin-top: 20px;
 }
-.lunch__wrapper .item {
-  max-width: 800px;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding: 10px 20px;
-}
-.lunch__wrapper .item__text {
-  max-width: 550px;
-  width: 100%;
-}
-.lunch__wrapper .item__text p {
-  opacity: 0.7;
-}
-.lunch__wrapper .item span {
-  align-self: center;
-}
 
 .kitchen {
   background: white;
-  color: #1e1e1e;
+  color: #031c48;
   padding-bottom: 100px;
 }
 .kitchen .container {
-  display: flex;
   padding: 30px 0;
 }
 .kitchen__man {
@@ -385,46 +448,24 @@ html {
 .kitchen__wrapper--title {
   text-align: center;
 }
-.kitchen .item {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding: 10px 0px;
-}
-.kitchen .item__text {
-  width: 70%;
-}
-.kitchen .item__text p {
-  opacity: 0.7;
-}
-.kitchen .item span {
-  width: 40px;
-  text-align: right;
-  margin-left: 10px;
-  align-self: center;
+@media screen and (max-width: 786.01px) {
+  .kitchen {
+    padding-bottom: 0;
+  }
+  .kitchen .container__revrse {
+    flex-direction: column-reverse;
+  }
+  .kitchen__man {
+    width: 100%;
+  }
+  .kitchen__wrapper {
+    width: 100%;
+  }
 }
 
 .drinks {
   background: linear-gradient(180deg, rgb(255, 255, 255) 0%, transparent 10%, transparent 90%, rgb(255, 255, 255) 100%), url(../img/drinks__bg.jpg) -190px no-repeat;
   background-size: cover;
-}
-.drinks .item {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding: 10px 0px;
-}
-.drinks .item__text {
-  width: 70%;
-}
-.drinks .item__text p {
-  opacity: 0.7;
-}
-.drinks .item span {
-  width: 40px;
-  text-align: right;
-  margin-left: 10px;
-  align-self: center;
 }
 .drinks__wrapper {
   width: 50%;
@@ -432,4 +473,15 @@ html {
   flex-direction: column;
   padding: 0px 40px 40px 40px;
   margin: 0 0 60px 0;
+}
+@media screen and (max-width: 786.01px) {
+  .drinks {
+    background-position-x: -900px;
+  }
+  .drinks__wrapper {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    background-color: rgba(255, 255, 255, 0.686);
+  }
 }/*# sourceMappingURL=main.css.map */
