--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 @import url(./keyframes.css);
 $main__color: white;
-$text__color: #1e1e1e;
+$text__color: #031c48;
 $contrast__color: white;
 $logo__color: #85282a;
 $little__shadow: 6px 6px 6px 0 rgba(0, 0, 0, 0.1),
@@ -8,7 +8,6 @@ $little__shadow: 6px 6px 6px 0 rgba(0, 0, 0, 0.1),
 $big__shadow: 12px 12px 12px 0 rgba(0, 0, 0, 0.3),
   -8px -8px 8px 0 rgba(166, 165, 165, 0.3);
 
-// #a6876f - кофейный который
 // logo__font: https://www.fontsquirrel.com/fonts/carrois-gothic;
 
 // TODO different bg on pc & phone
@@ -31,6 +30,9 @@ span {
 
 h1 {
   font-size: 54px;
+  @media screen and (max-width: 786.01px) {
+    font-size: 40px;
+  }
 }
 
 img {
@@ -54,6 +56,10 @@ a {
   color: inherit;
 }
 
+p {
+  opacity: 0.7;
+}
+
 ul,
 nav {
   list-style-type: none;
@@ -64,6 +70,9 @@ html {
   font-family: "Roboto Slab", serif;
   background: fixed url(../img/bg__18.png) 0 -10vh no-repeat;
   background-size: cover;
+  @media screen and (max-width: 786.01px) {
+    background-position-x: -600px;
+  }
 }
 
 .container {
@@ -73,6 +82,9 @@ html {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  @media screen and (max-width: 786.01px) {
+    justify-content: space-around;
+  }
 }
 //  ! .......... MAIN ..............
 .main {
@@ -88,17 +100,19 @@ html {
   padding: 20px 0 100px;
   .container {
     justify-content: center;
-    // flex-direction: column;
   }
   &__logo {
     max-width: 400px;
     width: 100%;
-    align-self: center;
-    // * развлекаемся с лого
-    // filter: hue-rotate(45deg);
     filter: sepia(0.1);
     opacity: 0;
     animation: appearan 1.5s 100ms ease-out forwards;
+  }
+  @media screen and (max-width: 786.01px) {
+    height: 85vh;
+    &__logo {
+      padding: 0 5px;
+    }
   }
 }
 //  ! .......... NAVIGATION .............
@@ -114,15 +128,16 @@ html {
   .list {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     max-width: 900px;
     width: 100%;
+    font-size: 20px;
     &__link {
       border-radius: 20px;
       margin-left: 10px;
       a {
         display: block;
         padding: 5px 20px;
-        font-size: 20px;
       }
       &:hover {
         box-shadow: $little__shadow;
@@ -147,8 +162,28 @@ html {
       }
     }
   }
+  @media screen and (max-width: 786.01px) {
+    padding: 5px 0;
+    .container {
+      flex-direction: column-reverse;
+    }
+    .list {
+      font-size: 16px;
+      justify-content: space-around;
+      a {
+        padding: 2px 5px;
+      }
+    }
+    .delivery {
+      font-size: 20px;
+      text-align: center;
+      &__link--caption {
+        display: none;
+      }
+    }
+  }
 }
-// !............ CATEGORY .....................
+// ? ............ CATEGORY .....................
 .category {
   display: flex;
   justify-content: space-between;
@@ -166,8 +201,17 @@ html {
     height: 4px;
     background: $text__color;
   }
+  @media screen and (max-width: 786.01px) {
+    padding: 20px 0 10px;
+    &__title {
+      margin: 10px;
+      i {
+        margin-right: 5px;
+      }
+    }
+  }
 }
-// ! ............. BOX .......................
+// ? ............. BOX .......................
 .box {
   background-color: $main__color;
   margin: 20px;
@@ -247,6 +291,9 @@ html {
   background: $main__color;
   &__container {
     margin-bottom: 100px;
+    @media screen and (max-width: 786.01px) {
+      margin-bottom: 0px;
+    }
   }
   &__box:hover .box__wrapper--img {
     transform: rotateZ(30deg);
@@ -315,6 +362,26 @@ html {
     }
   }
 }
+// ? ........... ITEM ...............
+.item {
+  max-width: 800px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0px;
+  &__text {
+    width: 70%;
+  }
+  span {
+    width: 40px;
+    text-align: right;
+    margin-left: 10px;
+    align-self: center;
+  }
+  @media screen and (max-width: 786.01px) {
+    padding: 10px 10px;
+  }
+}
 // ! ............. Burger ..............
 .burger {
   background: url(../img/burger__bg.png) 0 -150px no-repeat;
@@ -333,23 +400,15 @@ html {
     }
   }
   .item {
-    max-width: 800px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 0px;
-    &__text {
-      max-width: 400px;
-      width: 100%;
-      p {
-        opacity: 0.7;
-      }
-    }
-    span {
-      width: 40px;
-      text-align: right;
-      align-self: center;
-      margin-left: 15px;
+    max-width: 550px;
+  }
+  @media screen and (max-width: 786.01px) {
+    background-position-x: -400px;
+    background-position-y: 0;
+    &__wrapper {
+      margin: 0;
+      padding: 0 0 40px;
+      background: #051d46d1;
     }
   }
 }
@@ -373,23 +432,6 @@ html {
     &--title {
       margin-top: 20px;
     }
-    .item {
-      max-width: 800px;
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      padding: 10px 20px;
-      &__text {
-        max-width: 550px;
-        width: 100%;
-        p {
-          opacity: 0.7;
-        }
-      }
-      span {
-        align-self: center;
-      }
-    }
   }
 }
 // ! ................ KITCHEN ..............
@@ -398,7 +440,6 @@ html {
   color: $text__color;
   padding-bottom: 100px;
   .container {
-    display: flex;
     padding: 30px 0;
   }
   &__man {
@@ -411,45 +452,22 @@ html {
       text-align: center;
     }
   }
-  .item {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 0px;
-    &__text {
-      width: 70%;
-      p {
-        opacity: 0.7;
-      }
+  @media screen and (max-width: 786.01px) {
+    padding-bottom: 0;
+    .container__revrse {
+      // salats & desert
+      flex-direction: column-reverse;
     }
-    span {
-      width: 40px;
-      text-align: right;
-      margin-left: 10px;
-      align-self: center;
+    &__man {
+      width: 100%;
+    }
+    &__wrapper {
+      width: 100%;
     }
   }
 }
 // ! ................ DRINKS ..............
 .drinks {
-  .item {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 0px;
-    &__text {
-      width: 70%;
-      p {
-        opacity: 0.7;
-      }
-    }
-    span {
-      width: 40px;
-      text-align: right;
-      margin-left: 10px;
-      align-self: center;
-    }
-  }
   background: linear-gradient(
       180deg,
       rgba(255, 255, 255) 0%,
@@ -465,5 +483,14 @@ html {
     flex-direction: column;
     padding: 0px 40px 40px 40px;
     margin: 0 0 60px 0;
+  }
+  @media screen and (max-width: 786.01px) {
+    background-position-x: -900px;
+    &__wrapper {
+      width: 100%;
+      padding: 0;
+      margin: 0;
+      background-color: rgba(255, 255, 255, 0.686);
+    }
   }
 }
