--- a/css/keyframes.css
+++ b/css/keyframes.css
@@ -1,12 +1,15 @@
 @keyframes rotate {
   0% {
     transform: rotateY(0deg);
+    -webkit-transform: rotateY(0deg);
   }
   20% {
     transform: rotateY(360deg);
+    -webkit-transform: rotateY(360deg);
   }
   100% {
     transform: rotateY(360deg);
+    -webkit-transform: rotateY(360deg);
   }
 }
 @keyframes appearan {
