--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow: hidden;
+}
+
 p,
 h1,
 h2,
@@ -81,6 +85,11 @@ html {
     justify-content: space-around;
   }
 }
+@media screen and (max-width: 1300.01px) {
+  .container {
+    justify-content: space-around;
+  }
+}
 
 .ivent {
   text-transform: uppercase;
@@ -136,6 +145,7 @@ html {
   background-color: white;
   color: #2c1816;
   font-weight: 600;
+  min-height: 40px;
 }
 .header .container {
   align-items: center;
@@ -172,6 +182,21 @@ html {
 .header__icon--inst img {
   width: 45px;
   margin: 0 20px;
+}
+@media screen and (max-width: 1300.01px) {
+  .header {
+    padding: 5px 0;
+  }
+  .header .container {
+    flex-direction: column-reverse;
+    height: auto;
+  }
+  .header .list {
+    justify-content: space-around;
+  }
+  .header .list a {
+    padding: 2px 5px;
+  }
 }
 @media screen and (max-width: 786.01px) {
   .header {
@@ -263,6 +288,8 @@ html {
 .box__wrapper {
   display: flex;
   flex-direction: column;
+  -webkit-perspective: 900000px;
+  perspective: 900000px;
 }
 .box__wrapper--img {
   width: 240px;
@@ -278,8 +305,8 @@ html {
 }
 .box__wrapper--new {
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: -10px;
+  left: -10px;
   padding: 5px 10px;
   background-color: red;
   color: white;
@@ -291,8 +318,8 @@ html {
 .box__wrapper--pepper {
   position: absolute;
   width: 40px;
-  top: 261px;
-  left: 215px;
+  top: 240px;
+  left: 198px;
 }
 .box__numbers {
   width: 100%;
@@ -427,14 +454,14 @@ html {
 }
 
 .burger {
-  background: url(../img/burger__bg.png) 0 -150px no-repeat;
+  background: url(../img/burger__bg.png) center -150px no-repeat;
   background-size: cover;
   color: white;
+  padding: 60px 0;
 }
 .burger__wrapper {
-  margin: 60px 0;
   background-color: #031c48;
-  padding: 0 40px 40px;
+  padding: 0px 40px 40px;
 }
 .burger .category {
   padding: 20px 0;
@@ -446,13 +473,19 @@ html {
 .burger .item {
   max-width: 550px;
 }
+@media screen and (max-width: 1300.01px) {
+  .burger {
+    background-position-y: 0;
+    background-size: 100%;
+  }
+}
 @media screen and (max-width: 786.01px) {
   .burger {
-    background-position-x: -400px;
+    background-size: cover;
     background-position-y: 0;
+    padding: 0;
   }
   .burger__wrapper {
-    margin: 0;
     padding: 0 0 40px;
     background: rgba(5, 29, 70, 0.8196078431);
   }
