--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,10 @@ $big__shadow: 12px 12px 12px 0 rgba(0, 0, 0, 0.3),
   box-sizing: border-box;
 }
 
+body {
+  overflow: hidden;
+}
+
 p,
 h1,
 h2,
@@ -82,9 +86,12 @@ html {
   @media screen and (max-width: 786.01px) {
     justify-content: space-around;
   }
+  @media screen and (max-width: 1300.01px) {
+    justify-content: space-around;
+  }
 }
 //  ? .......... IVENT .............
-.ivent{
+.ivent {
   text-transform: uppercase;
   display: none;
   position: fixed;
@@ -122,11 +129,11 @@ html {
     width: 100%;
     opacity: 0;
   }
-  .animated__logo{    
+  .animated__logo {
     animation: appearan 1.5s 150ms ease-out forwards;
   }
   @media screen and (max-width: 786.01px) {
-    height: 85vh;    
+    height: 85vh;
     &__logo {
       padding: 0 5px;
     }
@@ -141,6 +148,7 @@ html {
   background-color: $main__color;
   color: $text__color;
   font-weight: 600;
+  min-height: 40px;
   .container {
     align-items: center;
     height: 10vh;
@@ -162,12 +170,12 @@ html {
       }
     }
   }
-  &__icon{
+  &__icon {
     display: flex;
     align-items: center;
     &--link {
-        font-size: 30px;
-        text-transform: uppercase;
+      font-size: 30px;
+      text-transform: uppercase;
       &:hover {
         text-decoration: underline;
       }
@@ -176,6 +184,19 @@ html {
       img {
         width: 45px;
         margin: 0 20px;
+      }
+    }
+  }
+  @media screen and (max-width: 1300.01px) {
+    padding: 5px 0;
+    .container {
+      flex-direction: column-reverse;
+      height: auto;
+    }
+    .list {
+      justify-content: space-around;
+      a {
+        padding: 2px 5px;
       }
     }
   }
@@ -188,17 +209,15 @@ html {
     .list {
       font-size: 14px;
       justify-content: space-around;
-      a {
-        padding: 2px 5px;
-      }
     }
-    .header__icon{
-      &--link{
-        font-size: 20px;
-      }
-      &--inst{
-        width: 30px;
-      }
+    .list a {
+      padding: 2px 5px;
+    }
+    .header__icon--link {
+      font-size: 20px;
+    }
+    .header__icon--inst {
+      width: 30px;
     }
   }
 }
@@ -215,7 +234,7 @@ html {
     text-align: center;
     margin: 0 50px;
     position: relative;
-    &--sticer{
+    &--sticer {
       position: absolute;
       top: 23%;
       right: -270px;
@@ -241,10 +260,10 @@ html {
       i {
         margin-right: 5px;
       }
-      &--sticer{
-        font-size: 20px;  
+      &--sticer {
+        font-size: 20px;
         top: -6%;
-        right: 88px;    
+        right: 88px;
         transform: rotate(10deg);
       }
     }
@@ -267,6 +286,8 @@ html {
   &__wrapper {
     display: flex;
     flex-direction: column;
+    -webkit-perspective: 900000px;
+    perspective: 900000px;
     &--img {
       width: 240px;
       height: 240px;
@@ -281,8 +302,8 @@ html {
     }
     &--new {
       position: absolute;
-      top: 10px;
-      left: 10px;
+      top: -10px;
+      left: -10px;
       padding: 5px 10px;
       background-color: red;
       color: white;
@@ -294,8 +315,8 @@ html {
     &--pepper {
       position: absolute;
       width: 40px;
-      top: 261px;
-      left: 215px;
+      top: 240px;
+      left: 198px;
     }
   }
   &__numbers {
@@ -328,7 +349,7 @@ html {
 // !.............. PIZZA ...................
 .pizza {
   background: $main__color;
-  h3{
+  h3 {
     opacity: 0.9;
   }
   &__container {
@@ -419,7 +440,7 @@ html {
     text-align: right;
     margin-left: 10px;
     align-self: center;
-    &:nth-child(2n+1){
+    &:nth-child(2n + 1) {
       font-weight: 700;
     }
   }
@@ -429,13 +450,13 @@ html {
 }
 // ! ............. Burger ..............
 .burger {
-  background: url(../img/burger__bg.png) 0 -150px no-repeat;
+  background: url(../img/burger__bg.png) center -150px no-repeat;
   background-size: cover;
   color: white;
+  padding: 60px 0;
   &__wrapper {
-    margin: 60px 0;
     background-color: $blue__element;
-    padding: 0 40px 40px;
+    padding: 0px 40px 40px;
   }
   .category {
     padding: 20px 0;
@@ -447,11 +468,15 @@ html {
   .item {
     max-width: 550px;
   }
-  @media screen and (max-width: 786.01px) {
-    background-position-x: -400px;
+  @media screen and (max-width: 1300.01px) {
     background-position-y: 0;
+    background-size: 100%;
+  }
+  @media screen and (max-width: 786.01px) {
+    background-size: cover;
+    background-position-y: 0;
+    padding: 0;
     &__wrapper {
-      margin: 0;
       padding: 0 0 40px;
       background: #051d46d1;
     }
@@ -485,7 +510,7 @@ html {
   background: $main__color;
   color: $text__color;
   padding-bottom: 100px;
-  .category{
+  .category {
     padding: 0;
   }
   &__man {
@@ -554,35 +579,35 @@ html {
   }
 }
 // ! ................Delivery .................
-.delivery{
+.delivery {
   padding: 40px 0;
   background-color: $main__color;
-  .category{
+  .category {
     padding-top: 0;
   }
-  .description {    
-    li{
+  .description {
+    li {
       margin: 20px 0;
       font-size: 20px;
       font-weight: 700;
     }
-    span{
+    span {
       color: red;
     }
-    &__timetable{ 
-      li:first-child{
+    &__timetable {
+      li:first-child {
         padding-left: 0;
-      }  
-      li{          
-        padding-left: 30px; 
-        margin: 10px 0;    
+      }
+      li {
+        padding-left: 30px;
+        margin: 10px 0;
         max-width: 230px;
         width: 100%;
         display: flex;
         justify-content: space-between;
       }
     }
-    &--btn{
+    &--btn {
       display: block;
       padding: 20px 10px;
       margin-top: 40px;
@@ -592,52 +617,52 @@ html {
       font-size: 20px;
       text-align: center;
     }
-  }  
-  iframe{
+  }
+  iframe {
     border-radius: 20px;
     border: 4px solid $blue__element;
     max-width: 800px;
     width: 100%;
     height: 600px;
   }
-  &__terms{
+  &__terms {
     display: flex;
     align-items: center;
     width: 100%;
     text-align: center;
     padding: 40px 0;
     font-size: 20px;
-    li{
+    li {
       list-style-type: disc;
       text-align: start;
       max-width: 600px;
       width: 100%;
       padding: 10px 5px;
       opacity: 0.8;
-      span{
+      span {
         color: red;
       }
     }
   }
   @media screen and (max-width: 786.01px) {
-   padding: 40px 10px;
-   iframe{
-    margin-top: 20px;
-   } 
+    padding: 40px 10px;
+    iframe {
+      margin-top: 20px;
+    }
   }
 }
 // ! ................Party..............
-.party{
+.party {
   background-color: $main__color;
   padding-bottom: 40px;
-  .category{
+  .category {
     padding-top: 0;
   }
-  .description{
+  .description {
     display: flex;
     align-items: center;
     flex-direction: column;
-    a{
+    a {
       display: block;
       padding: 20px 15px;
       border-radius: 20px;
@@ -648,33 +673,33 @@ html {
       margin-top: 40px;
     }
   }
-  ul{
+  ul {
     font-size: 30px;
-    li{
+    li {
       margin: 20px 0;
-      list-style-type:disc;
+      list-style-type: disc;
     }
   }
-  img{
+  img {
     width: 50%;
     border-radius: 20px;
   }
   @media screen and (max-width: 786.01px) {
     padding: 0;
-    .description{
+    .description {
       padding: 40px 0px;
       background: rgba(255, 255, 255, 0.6);
     }
-    .container{
-      background: url(../img/party.JPG) no-repeat ;
+    .container {
+      background: url(../img/party.JPG) no-repeat;
       background-size: cover;
     }
-    ul{
+    ul {
       font-size: 20px;
     }
-    img{
+    img {
       display: none;
-    }  
+    }
   }
 }
 // ! ................. FOOTER ..............
@@ -740,7 +765,7 @@ footer {
     .aside {
       width: 100%;
       padding: 40px 10px 0 40px;
-      ul{
+      ul {
         margin-bottom: 20px;
       }
     }
@@ -757,12 +782,12 @@ footer {
   height: 100%;
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.5);
-  .modal__content { 
-    max-width: 400px;   
+  .modal__content {
+    max-width: 400px;
     margin: 40px auto;
     position: relative;
-    img{      
-    border-radius: 20px;
+    img {
+      border-radius: 20px;
     }
   }
   .modal__close {
@@ -774,16 +799,16 @@ footer {
     border: none;
     background-color: transparent;
     cursor: pointer;
-  }  
+  }
   @media screen and (max-width: 786.01px) {
-    .modal__content{
+    .modal__content {
       margin: 10px;
-    }      
+    }
   }
 }
 .show {
-  display: block;  
+  display: block;
 }
 // @media screen and (max-width: 786.01px) {
-    
+
 // }
