--- a/css/main.css
+++ b/css/main.css
@@ -775,32 +775,53 @@ footer .signatyre a:hover {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 999;
+  z-index: 100;
   display: none;
   width: 100%;
   height: 100%;
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.5);
 }
-.modal .modal__content {
+.modal__content {
   max-width: 400px;
   margin: 40px auto;
+  align-self: center;
   position: relative;
 }
-.modal .modal__content img {
+.modal__content--image {
   border-radius: 20px;
+  display: none;
 }
-.modal .modal__close {
+.modal__button {
+  padding: 10px 5px;
   position: absolute;
+  line-height: 1em;
+  font-size: 50px;
+  color: white;
+  font-weight: 900;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  z-index: 200;
+}
+.modal__next {
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0;
+}
+.modal__back {
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+}
+.modal__close {
   right: 10px;
   font-size: 50px;
   color: red;
   font-weight: 700;
-  border: none;
   background-color: transparent;
-  cursor: pointer;
 }
-@media screen and (max-width: 786.01px) {
+@media screen and (max-width: 400.01px) {
   .modal .modal__content {
     margin: 10px;
   }
